--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "autoprefixer": "^10.0.1",
     "critters": "^0.0.23",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+  "eslint-config-next": "^14.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
