Now secrets are manage by aws

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # This key is expired and is of no use attached here as a place holder, rest mentioned here model name and system prompt
-GEMINI_API_KEY=AIzaSyBf7QhN8k_3xl_jQsC70jNGs4naTXUqUr8
+GEMINI_API_KEY=
 
 # Optional: override the Gemini model (default used in code: gemini-1.5-flash-002)
-NEXT_PUBLIC_GEMINI_MODEL=gemini-2.5-flash-lite
+NEXT_PUBLIC_GEMINI_MODEL=
 
 # System prompt injected before each user message (keep concise; <4k chars recommended)
 GEMINI_SYSTEM_PROMPT="
