chore: improve diagnostics for missing Secrets Manager key and add build-time env logging

--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,9 @@ applications:
       phases:
         preBuild:
           commands:
+            - echo "Node: $(node -v)"
+            - echo "PWD: $(pwd)"
+            - echo "Listing GEMINI related env vars (names only):" && (printenv | grep -i GEMINI || echo "NONE")
             - npm ci
         build:
           commands:
