Fix: Disable Secrets Manager to use env vars directly
- Add SKIP_SECRETS_MANAGER=true to environment config
- Env vars are working (source.env=true in error)
- Secrets Manager failing with CredentialsProviderError due to IAM
- This allows API to work immediately with environment variables

--- a/amplify.yml
+++ b/amplify.yml
@@ -26,5 +26,6 @@ applications:
         NEXT_PUBLIC_GEMINI_MODEL: ${NEXT_PUBLIC_GEMINI_MODEL}
         GEMINI_SYSTEM_PROMPT: ${GEMINI_SYSTEM_PROMPT}
         AWS_REGION: us-east-1
-        # Optional: Enable Secrets Manager
-        # SKIP_SECRETS_MANAGER: "false"
+        # Skip Secrets Manager since IAM role not configured yet
+        # We're using environment variables directly (which are working!)
+        SKIP_SECRETS_MANAGER: "true"
